--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ h1, h2, .special {
 
 
 #top {
-    background-image: url(./image/background/top-bg2.jpg);
+    background-image: url(./image/background/new.jpg);
     background-size: cover;
     height: 100vh;
     border-bottom: 1px solid gray;
