--- a/style.css
+++ b/style.css
@@ -1,85 +1,79 @@
 body {
     background-color: #111000;
-    color: white;
+    color: black;
     margin: 0;
     padding: 0;
+    font-size: 16px;
 }
 
-h1, h2, .special {    
+hr {
+    border-color: black;
+}
+
+b {
+    color: blue;
+}
+
+
+.container {
+    background-color: darkseagreen;
+}
+
+
+.footer {
     text-align: center;
+    text-align: center;
+    font-size: 1.15em;
 }
 
-
-
-#navbar-top ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #003300;
-    position:fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    border-bottom: 2px solid gray;
+.footer i {
+    font-size: 30px;
+    margin-right: 15px;
+    margin-left: 15px;
 }
 
-#navbar-top li {
-    float: left;
-    border-right: 1px solid #111000;
-    border-left: 1px solid #111000;
-}
-
-#navbar-top li a {
-    display: block;
+.footer a {
     color: white;
-    text-align: center;
-    padding: 14px 16px;
     text-decoration: none;
 }
 
-/* Change the link color to #111000 (black) on hover */
-#navbar-top li a:hover {
-    background-color: #111000;
-}
 
-#navbar-right {
-    float: right;
-    border-right: none;
-}
-
-
-
-#top {
+.top {
     background-image: url(./image/background/new.jpg);
     background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
     height: 100vh;
-    border-bottom: 1px solid gray;
     color: white;
+    text-align: center;
   
 }
 
-#top h1 {
-    padding-top: 3.5em;;
-    margin-top: 49px;
+.top h1 {
+    padding-top: 3.5em;
+    margin-top: 0px;
     font-size: 3.75em;
     text-shadow: 2px 2px #051405;
 }
 
-#top h2 {
+.top h2 {
     font-size: 2em;
     color: #ebfaeb;
     text-shadow: 2px 2px #051405;
 }
 
+.top a {
+    font-size: 20px;
+    color: white;
+    text-shadow: 2px 2px #051405;
+}
 
 
-#about {
-    background-color: #003300;
+.about {
     height: auto;
 }
 
-#about img {
+.about img {
     height: 324;
     width: 243;
     border-radius: 50% 8%;
@@ -91,15 +85,15 @@ h1, h2, .special {
     padding: 5px;
 }
 
-#about h1 {
+.about h1 {
     font-size: 2.25em;
 }
 
-#about h3 {
+.about h3 {
     line-height: 0;
 }
 
-#about p {
+.about p {
     font-size: 1.15em;
     line-height: 1.15;
     margin-left: 1em;
@@ -107,107 +101,42 @@ h1, h2, .special {
 }
 
 
-#contact {
-    height: 25vh;
-background-color: #003300;
-    text-align: center;
-    font-size: 1.15em;
-}
-
-#contact i {
-    font-size: 30px;
-    margin-right: 15px;
-    margin-left: 15px;
-}
-
-#contact a {
-    color: white;
-    text-decoration: none;
-}
-
-
-#arts {
-    height: 100vh;
-    background-color: #003300;
-}
-
-
-#projects {
-    background-color: #001a00;
+.projects {
     height: auto;
     margin-left: 10%;
     margin-right: 10%;
     margin-bottom: 1%;
 }
 
-#projects h1 {
+.projects h1 {
     font-size: 2.25em;
 }
 
-#projects p, #projects h2 {
+.projects p, #projects h2 {
     color: black;
     text-align: left;
 }
 
-#projects img {
+.projects img {
     float: left;
     height: 188px;
     width: 379px;
     margin: 1%;
 }
 
-#projects table {
+.projects table {
     background-color: white;
     width: 100%;
     margin: 0;
     padding: 0;
 }
 
-#projects table th {
+.projects table th {
     border-top: 3px solid grey;
     border-bottom: 3px solid grey;
 }
 
 /* Change the link color to #111000 (black) on hover */
-#projects table th:hover {
+.projects table th:hover {
     background-color: #e6ffe6;
-}
-
-
-
-
-
-.row {
-    display: flex;
-    width: 100%;
-    height: auto;
-}
-
-.row::after {
-    display: block;
-    clear: both;
-    content: "";
-}
-
-.col-1  {width: 8.33%;}
-.col-2  {width:16.66%;}
-.col-2  {width:16.66%;}
-.col-3  {width: 25%;}
-.col-4  {width: 33.33%;}
-.col-5  {width: 41.66%;}
-.col-6  {width: 50%;}
-.col-7  {width: 58.33%;}
-.col-8  {width: 66.66%;}
-.col-9  {width: 75%;}
-.col-10 {width: 83.33%;}
-.col-11 {width: 91.66%;}
-.col-12 {width: 100%;}
-
-* {
-    box-sizing: border-box;
-}
-
-[class*="col-"] {
-    border: 5px double gray;
-    background-color: white;
 }
