Personal Website Updated
Updated - 27/09/2017

--- a/style.css
+++ b/style.css
@@ -1,19 +1,22 @@
 body {
-    background-color: #111000;
-    color: black;
+    background-color: #4a6f4a;
+    color: #2e3c2e;
     margin: 0;
     padding: 0;
     font-size: 16px;
 }
 
 hr {
-    border-color: black;
+    border-color: #2e3c2e;
 }
 
 b {
     color: blue;
 }
 
+.navbar-inverse {
+    background-color: #2e3c2e;
+}
 
 .container {
     background-color: darkseagreen;
@@ -90,14 +93,15 @@ b {
 }
 
 .about h3 {
-    line-height: 0;
+    
+    padding-left: 10px;
 }
 
 .about p {
     font-size: 1.15em;
     line-height: 1.15;
-    margin-left: 1em;
-    margin-right: 1em;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 
