--- a/note.css
+++ b/note.css
@@ -1,13 +1,13 @@
 body {
-    background-color: #111000;
-    color: black;
+    background-color: #4a6f4a;
+    color: #2e3c2e;
     margin: 0;
     padding: 0;
     font-size: 16px;
 }
 
 hr {
-    border-color: black;
+    border-color: #2e3c2e;
 }
 
 b {
@@ -23,12 +23,33 @@ table{
     background-color: whitesmoke;
 }
 
+.navbar-inverse {
+    background-color: #2e3c2e;
+}
+
 .container {
     background-color: darkseagreen;
 }
 
+.header  {
+    width: 100%;
+    border-radius: 10px;
+}
+
+.headerLeft {
+    padding-left: 10px;
+}
+
 .title {
     text-align: center;
+}
+
+.specialTalk {
+    background-color: wheat;
+    border-color: #faf0dc #b2a182 #595041 #f6e4c0;
+    border-width: 5px;
+    border-style:solid;
+    padding:4px;
 }
 
 .cmd {
