--- a/style.css
+++ b/style.css
@@ -66,9 +66,9 @@ b {
 }
 
 .top a {
-    font-size: 20px;
-    color: white;
-    text-shadow: 2px 2px #051405;
+    font-size: 1.5em;
+    color: #A7C7B9;
+    text-shadow: 2px 2px #272727;
 }
 
 
