--- a/style.css
+++ b/style.css
@@ -116,7 +116,12 @@ b {
     font-size: 2.25em;
 }
 
-.projects p, #projects h2 {
+.projects p {
+    font-size: 14px;
+    text-align: left;
+}
+
+.projects h2 {
     color: black;
     text-align: left;
 }
