--- a/note.css
+++ b/note.css
@@ -52,6 +52,34 @@ table{
     padding:4px;
 }
 
+pre code {
+    display: block;
+    border: 0;
+    border-radius: 3px;
+    margin: 1em 0;
+    white-space: initial;
+}
+
+.ccmd {
+    color: #6a737d;
+}
+	
+.ckey {
+    color: #d73a49;
+}
+
+.cvar {
+    color: #6f42c1;
+}
+
+.cmtd, .cnum {
+    color: #005cc5;
+} 
+
+.cline {
+    color: rgba(27,31,35,0.3); 
+}
+
 .cmd {
     color: darkgreen;
 }
