--- a/note.css
+++ b/note.css
@@ -16,7 +16,7 @@ b {
 
 code {
     font-size: 15px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Hack','Open Sans', sans-serif;
 }
 
 table{
