--- a/note.css
+++ b/note.css
@@ -10,7 +10,7 @@ hr {
     border-color: #2e3c2e;
 }
 
-b {
+b, h3 {
     color: blue;
 }
 
@@ -56,7 +56,6 @@ pre code {
     display: block;
     border: 0;
     border-radius: 3px;
-    margin: 1em 0;
     white-space: initial;
 }
 
@@ -100,6 +99,9 @@ pre code {
     color: black;
 }
 
+ol, ul {
+    margin-top: -5px;
+}
 
 .footer {
     text-align: center;
