--- a/css/note.css
+++ b/css/note.css
@@ -56,3 +56,21 @@ ol, ul {
     font-style: italic;
     color: darkviolet;
 }
+
+.tableUnderline {
+    border-bottom-style: solid;
+    border-bottom-width: thin;
+    border-bottom-color: black;
+}
+
+.tableDoubleUnderline {
+    border-bottom-style: double;
+    border-bottom-width: thick;
+    border-bottom-color: black;
+}
+
+.tableLeftLine {
+    border-left-style: solid;
+    border-left-width: thin;
+    border-left-color: black;
+}
