--- a/css/cs230use.css
+++ b/css/cs230use.css
@@ -23,3 +23,11 @@
     font-style: italic;
     font-size: 20px;
 }
+
+code {
+    font-size: 15px;
+    font-family: 'Hack','Open Sans', sans-serif;
+    background-color: white;
+    color: black;
+    border: 1px;
+}
