--- a/css/cs230use.css
+++ b/css/cs230use.css
@@ -18,6 +18,12 @@
     background-color: #ddd;
 }
 
+.textTable tr .borderRightDashed {
+    border-right-color: black;
+    border-right-style: dashed;
+    border-right-width: 2px;
+}
+
 .math {
     font-family: 'Crimson Text', serif;
     font-style: italic;
