--- a/css/cs230use.css
+++ b/css/cs230use.css
@@ -3,20 +3,14 @@
     text-align: center;
 }
 
-.textTable tr th, .textTable tr td {
+.textTable tr th, .textTable tr td{
     border: 1px solid #ddd;
     text-align: center;
     padding-left: 6px;
     padding-right: 6px;
 }
 
-.textTable tr:nth-child(even){
-    background-color: #f2f2f2;
-}
 
-.textTable tr:hover {
-    background-color: #ddd;
-}
 
 .textTable tr .borderRightDashed {
     border-right-color: black;
@@ -60,4 +54,12 @@ code {
     width:auto;
     height:auto;
     background: white;
+}
+
+.textTable tr td .left {
+    display: block;
+    text-align: left;
+    border: 0;
+    border-radius: 3px;
+    white-space: initial;
 }
