--- a/css/style.css
+++ b/css/style.css
@@ -49,26 +49,21 @@ b {
 
 
 .top {
-    background-image: url(../image/background/new.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
     height: 100%;
-    color: white;
+    color: yellow;
     text-align: center;
 }
 
 .top h1 {
-    padding-top: 3.5em;
+    padding-top: 1.5em;
     margin-top: 0px;
     font-size: 3.75em;
-    text-shadow: 2px 2px #051405;
+    text-shadow: 2px 2px black;
 }
 
 .top h2 {
     font-size: 2em;
-    color: #A7C7B9;
-    text-shadow: 2px 2px #051405;
+    text-shadow: 2px 2px black;
 }
 
 .top a {
@@ -77,22 +72,38 @@ b {
     text-shadow: 2px 2px #051405;
 }
 
+.topImg, .about img {
+    height: 412.5px;
+    width: 219.5px;
+    border-radius: 50% 8%;
+    float: left;
+    margin-left: 1em;
+    margin-right: 1.5em;
+    margin-bottom: 1em;
+    border: 2px solid #ddd;
+    padding: 5px;
+}
+
+h1 center {
+    padding-top: 1em;
+    padding-bottom: 1em;
+    margin-top: 0px;
+    font-size: 1em;
+    color: yellow;
+    text-shadow: 2px 2px black;
+}
+
+.topIntro {
+    font-size: 18px;
+    line-height: 1.15;
+    padding-left: 10px;
+    padding-right: 10px;
+}
 
 .about {
     height: auto;
 }
 
-.about img {
-    height: 324;
-    width: 243;
-    border-radius: 50% 8%;
-    float: left;
-    margin-left: 1em;
-    margin-right: 3em;
-    margin-bottom: 1em;
-    border: 2px solid #ddd;
-    padding: 5px;
-}
 
 .about h1 {
     font-size: 2.25em;
