--- a/testing/style.css
+++ b/testing/style.css
@@ -1,6 +1,6 @@
 html{
   height: 100%;
-  background-color: black;
+  margin: 0 0;
 }
 
 body {
@@ -11,4 +11,40 @@ body {
   padding: 0;
   font-size: 16px;
   font-family: 'Noto Sans', sans-serif;
+}
+
+.container {
+  height: 100%;
+}
+
+#about {
+  background-color: #4a6f4a;
+  height: auto;
+  padding: 10px 10px;
+}
+
+img {
+  vertical-align: middle;
+}
+
+.aboutImg {
+  height: 412.5px;
+  width: 219.5px;
+  border-radius: 50% 8%;
+  float: left;
+  margin-left: 1em;
+  margin-right: 1.5em;
+  margin-bottom: 1em;
+  border: 2px solid #ddd;
+  padding: 5px;
+}
+
+#project {
+  background-color: #6b8d6b;
+  height: 90%;
+}
+
+#footer {
+  background-color: #4a6f4a;
+  height: 20%;
 }
