--- a/testing/style.css
+++ b/testing/style.css
@@ -41,12 +41,6 @@ body {
   float: right;
 }
 
-/* Change the color of links on hover */
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
 /* Add an active class to highlight the current page */
 .active {
   background-color: #4CAF50;
@@ -58,32 +52,25 @@ body {
   display: none;
 }
 
-/* The dropdown container */
+/* Dropdown container - needed to position the dropdown content */
 .dropdown {
   float: right;
   overflow: hidden;
 }
 
-/* Dropdown button */
+/* Style the dropdown button to fit inside the topnav */
 .dropdown .dropbtn {
-  font-size: 16px; 
+  font-size: 17px; 
   border: none;
   outline: none;
   color: white;
   padding: 14px 16px;
   background-color: inherit;
-  font-family: inherit; /* Important for vertical align on mobile phones */
-  margin: 0; /* Important for vertical align on mobile phones */
+  font-family: inherit;
+  margin: 0;
 }
 
-/* Add a red background color to navbar links on hover */
-/*
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: red;
-}
-*/
-
-/* Dropdown content (hidden by default) */
+/* Style the dropdown content (hidden by default) */
 .dropdown-content {
   display: none;
   position: absolute;
@@ -93,7 +80,7 @@ body {
   z-index: 1;
 }
 
-/* Links inside the dropdown */
+/* Style the links inside the dropdown */
 .dropdown-content a {
   float: none;
   color: black;
@@ -103,13 +90,20 @@ body {
   text-align: left;
 }
 
-/* Add a grey background color to dropdown links on hover */
-.dropdown-content a:hover {
-  background-color: #ddd;
+/* Add a dark background on topnav links and the dropdown button on hover */
+.topnav a:hover, .dropdown:hover .dropbtn {
+  background-color: #555;
+  color: white;
 }
 
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content{
+/* Add a grey background to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Show the dropdown menu when the user moves the mouse over the dropdown button */
+.dropdown:hover .dropdown-content {
   display: block;
 }
 
@@ -121,14 +115,13 @@ body {
   width: 100%;
 }
 
-.dropdown-content.sticky {
-  top: auto;
-}
-
-
 /* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
 .sticky + .container {
   padding-top: 60px;
+}
+
+.dropdown-content.sticky {
+  top: auto;
 }
 
 /* navbar */
@@ -143,30 +136,41 @@ body {
     width: 100%;
   }
   
-  /* When the screen is less than 576 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
-  .topnav a:not(:first-child), .topnav-right a, .dropdown {
+ /* When the screen is less than 575 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+  .topnav a:not(:first-child), .dropdown .dropbtn {
     display: none;
   }
-  
-  .topnav a.icon, .topnav-right a.icon {
+  .topnav a.icon {
     float: right;
     display: block;
   }
   
+  
   /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-  .topnav.responsive, .topnav-right.reponsive {
-    position: relative;
-  }
-  .topnav.responsive a.icon, .topnav-right.responsive a.icon{
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
     position: absolute;
     right: 0;
     top: 0;
   }
-  .topnav.responsive a, .topnav-right.responsive a{
+  .topnav.responsive a {
     float: none;
     display: block;
     text-align: left;
   }
+  .topnav.responsive .dropdown {float: none;}
+  .topnav.responsive .dropdown-content {position: relative;}
+  .topnav.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
+  
+  .topnav.responsive.sticky {
+    position: fixed;
+    top: 0;
+  }
+  
 } 
 
 /* Small devices (portrait tablets and large phones, 576px and up) */
