--- a/test/css/style.css
+++ b/test/css/style.css
@@ -16,9 +16,8 @@ body {
 
 .container {
   margin: auto;
-  min-height: 100vh;
+  background: #244234;
 }
-
 
 /************************************************************/
 /* navbar ***************************************************/
@@ -284,6 +283,13 @@ body {
 a {
   color:white;
 }
+
+.index {
+  margin: auto;
+  background: none;
+  min-height: 0vh;
+}
+
 /* cover ****************************************************/
 /************************************************************/
 
@@ -453,7 +459,6 @@ a {
 /* contact **************************************************/
 #contact {
   background: #244234;
-  min-height: 100vh;
 }
 
 #contact h1 {
