--- a/css/notes.css
+++ b/css/notes.css
@@ -22,6 +22,10 @@ table {
   text-align: center;
 }
 
+.header a {
+  color: firebrick;
+}
+
 h4 {
   color: blue;
 }
@@ -30,7 +34,9 @@ h4 {
   color: chocolate;
 }
 
-
+a {
+  color: #79DBAD;
+}
 
 
 
@@ -61,6 +67,7 @@ h4 {
 /* Create an active/current tablink class */
 .tab button.active {
   background-color: #ccc;
+  color: #244234;
 }
 
 /* Style the tab content */
@@ -68,4 +75,79 @@ h4 {
   display: none;
   padding: 6px 12px;
   margin: 10px 10px;
+}
+
+h4 {
+  font-size: 18px;
+  color: #79DBAD;
+}
+
+.imgRightMargin {
+  margin-right: 10px;
+}
+
+
+.cs, .tableNoBorder {
+  margin: 5px auto;
+}
+
+.cs tr th, .cs tr td, .tableNoBorder tr th, .tableNoBorder tr td {
+  text-align: center;
+  padding: 2px 15px;
+}
+
+.cs .borderLeftDashed {
+  border-left: dashed gray 2px;
+}
+
+.tableNoBorder .tableLeftBorder {
+  border: solid 1px gray;
+}
+
+.cs tr th, .tableNoBorder tr th {
+  border: solid gray 1px;
+  background-color: lightgray;
+}
+
+
+.tableNoBorder tr td {
+  border: solid 1px lightgray;
+}
+
+.cs tr th, .cs tr td, .tableNoBorder .tableWithBorder {
+  border: solid gray 1px;
+}
+
+.imgCentre {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+.buttomTable {
+  width: 100%; 
+}
+
+.buttomTable a {
+  color: firebrick;
+}
+
+.buttomLeftTable {
+  width: 45%;
+  text-align: left;
+}
+
+.buttomCentreTable {
+  width: 10%;
+  text-align: center;
+}
+
+.buttomRightTable {
+  width: 45%;
+  text-align: right;
+}
+
+img {
+  background: white;
 }
