--- a/css/style.css
+++ b/css/style.css
@@ -385,6 +385,7 @@ a {
 }
 
 #about .job h3, #about .job h4 {
+  margin: 0 0;
 }
 
 #about .job table {
@@ -417,7 +418,7 @@ a {
   border: 0;
   float: left;
   padding: 5px;
-  margin-bottom: 10px;
+  margin-bottom: 0px;
 }
 
 #about .job .right {
