--- a/css/notes.css
+++ b/css/notes.css
@@ -35,10 +35,8 @@ h4 {
 }
 
 a {
-  color: #79DBAD;
+  color: #79dbad;
 }
-
-
 
 /* Style the tab */
 .tab {
@@ -79,19 +77,22 @@ a {
 
 h4 {
   font-size: 18px;
-  color: #79DBAD;
+  color: #79dbad;
 }
 
 .imgRightMargin {
   margin-right: 10px;
 }
 
-
-.cs, .tableNoBorder {
+.cs,
+.tableNoBorder {
   margin: 5px auto;
 }
 
-.cs tr th, .cs tr td, .tableNoBorder tr th, .tableNoBorder tr td {
+.cs tr th,
+.cs tr td,
+.tableNoBorder tr th,
+.tableNoBorder tr td {
   text-align: center;
   padding: 2px 15px;
 }
@@ -104,17 +105,19 @@ h4 {
   border: solid 1px gray;
 }
 
-.cs tr th, .tableNoBorder tr th {
+.cs tr th,
+.tableNoBorder tr th {
   border: solid gray 1px;
   background-color: lightgray;
 }
-
 
 .tableNoBorder tr td {
   border: solid 1px lightgray;
 }
 
-.cs tr th, .cs tr td, .tableNoBorder .tableWithBorder {
+.cs tr th,
+.cs tr td,
+.tableNoBorder .tableWithBorder {
   border: solid gray 1px;
 }
 
@@ -124,9 +127,8 @@ h4 {
   margin-right: auto;
 }
 
-
 .buttomTable {
-  width: 100%; 
+  width: 100%;
 }
 
 .buttomTable a {
@@ -150,4 +152,72 @@ h4 {
 
 img {
   background: white;
+}
+
+/* CS 246 Use */
+code {
+  font-size: 15px;
+  font-family: 'Hack', 'Open Sans', sans-serif;
+  background-color: whitesmoke;
+  color: black;
+  padding: 2px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  border-radius: 10%;
+}
+
+.ccmd {
+  color: #5f5c72;
+}
+
+.ckey {
+  color: #d73a49;
+}
+
+.cvar {
+  color: #6f42c1;
+}
+
+.cmtd,
+.cnum {
+  color: #005cc5;
+}
+
+.cline {
+  color: rgba(27, 31, 35, 0.3);
+}
+
+.cmd {
+  color: darkgreen;
+}
+
+.cmdFile,
+.var {
+  color: red;
+}
+
+.cmdOption,
+.name {
+  color: purple;
+}
+
+.cmdInput {
+  color: darkorange;
+}
+
+.cmdOutput {
+  color: black;
+}
+
+.specialTalk {
+  color: black;
+  background-color: wheat;
+  border-color: #faf0dc #b2a182 #595041 #f6e4c0;
+  border-width: 5px;
+  border-style: solid;
+  padding: 4px;
+}
+
+.specialTalk h4 {
+  color: darkolivegreen;
 }
