--- a/css/style.css
+++ b/css/style.css
@@ -545,7 +545,7 @@ a {
 }
 
 #projects .content .flip-card-back p {
-  text-align: left;
+  text-align: justify;
   overflow: auto;
 }
 
@@ -569,7 +569,6 @@ a {
   width: 5%;
   text-align: right;
 }
-
 /* projects *************************************************/
 /************************************************************/
 
@@ -690,23 +689,52 @@ footer p {
 /************************************************************/
 
 /************************************************************/
-/* Shallow Water Animation **********************************/
-#shallowWaterAnimation p {
-  margin-left: 5px;
+/* All ProjectPage Use **************************************/
+.projectPage p {
+  text-align: justify;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
-#shallowWaterAnimation img {
+.projectPage img {
   width: 560px;
   height: 420px;
 }
 
-#shallowWaterAnimation .center {
+.projectPage .center {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 75%;
 }
 
+.projectPage img {
+  width: 75%;
+  height: 75%
+}
+
+.projectPage h3 {
+  margin-left: 5px;
+  color: #79DBAD;
+  margin-left: 10px;
+}
+
+
+.projectPage .warning {
+  color: red;
+}
+
+.projectPage code {
+  font: hack;
+  font-size: 16px;
+  background-color: rgb(26, 26, 26);
+  border-radius: 5px;
+  padding: 1px 1px;
+}
+/* All ProjectPage Use **************************************/
+/************************************************************/
+
+/************************************************************/
+/* Shallow Water Animation **********************************/
 #shallowWaterAnimation iframe {
   width: 560px;
   height: 420px;
@@ -714,35 +742,3 @@ footer p {
 /* Shallow Water Animation **********************************/
 /************************************************************/
 
-/************************************************************/
-/* Shallow Water Animation **********************************/
-#fashionMNIST p {
-  margin-left: 5px;
-}
-
-#fashionMNIST h3 {
-  margin-left: 5px;
-  color: #79DBAD;
-}
-
-#fashionMNIST .center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 75%;
-}
-
-#fashionMNIST .warning {
-  color: red;
-}
-
-#fashionMNIST code {
-  font: hack;
-  font-size: 16px;
-  background-color: rgb(26, 26, 26);
-  border-radius: 5px;
-  padding: 1px 1px;
-}
-
-/************************************************************/
-/************************************************************/
