--- a/css/style.css
+++ b/css/style.css
@@ -752,3 +752,16 @@ footer p {
 /* Shallow Water Animation **********************************/
 /************************************************************/
 
+/************************************************************/
+/* RDT Protocol *********************************************/
+#rdtProtocol iframe {
+  width: 560px;
+  height: 315px;
+}
+
+#rdtProtocol img {
+  width: 322px;
+  height: 102px;
+}
+/* RDT Protocol *********************************************/
+/************************************************************/
