--- a/css/style.css
+++ b/css/style.css
@@ -765,3 +765,8 @@ footer p {
 }
 /* RDT Protocol *********************************************/
 /************************************************************/
+
+
+#SlimeEscape img {
+  visibility: hidden;
+}
