add "go to top" button

--- a/pokemon/pokemon.css
+++ b/pokemon/pokemon.css
@@ -3,7 +3,7 @@
 }
 
 #card-gallery {
-  margin-top: 5px;
+  margin-top: 1px !important;
 }
 
 div.gallery {
@@ -35,11 +35,7 @@ div.desc {
 .pagination-container {
   overflow: hidden;
   display: flex;
-  /* display: flex;
-  align-items: center;
-  position: absolute;
-  bottom: 0;
-  justify-content: center; */
+  justify-content: center;
 }
 .pagination-number,
 .pagination-button {
@@ -59,4 +55,24 @@ div.desc {
 }
 .pagination-number.active {
   background: #79DBAD;
+}
+
+#go-to-top-button {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: #777; /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 10px; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
+}
+
+#go-to-top-button:hover {
+  background-color: #79DBAD; /* Add a dark-grey background on hover */
 }
