--- a/pokemon/pokemon.css
+++ b/pokemon/pokemon.css
@@ -16,9 +16,37 @@ div.gallery {
   border-radius:5px;
 }
 
-div.gallery img {
-  width: 100%;
-  height: auto;
+/* Extra small devices (phones, 575px and down) */
+@media only screen and (max-width: 683px) {
+  div.gallery img {
+    width: 100%;
+    height: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  div.gallery img {
+    display: block;
+    width: 328px;
+    height: 456px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  div.gallery img {
+    display: block;
+    width: 253px;
+    height: 353px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 div.desc {
