--- a/pokemon/pokemon.css
+++ b/pokemon/pokemon.css
@@ -6,6 +6,16 @@ p {
   padding: 10px;
 }
 
+div.left-container {
+  width: 20%; 
+  float: left;
+}
+
+div.right-container {
+  width: 80%;
+  float: right;
+}
+
 #card-gallery {
   margin-top: 1px !important;
 }
@@ -18,6 +28,10 @@ div.gallery {
 
 /* Extra small devices (phones, 575px and down) */
 @media only screen and (max-width: 683px) {
+  .container {
+    /* max-width: none; */
+  }
+
   div.gallery img {
     width: 100%;
     height: 100%;
@@ -29,6 +43,10 @@ div.gallery {
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
+  .container {
+    /* max-width: 90%; */
+  }
+
   div.gallery img {
     display: block;
     width: 328px;
@@ -40,6 +58,11 @@ div.gallery {
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
+  .container {
+    /* max-width: 90%; */
+    /* min-height: 2150px; */
+  }
+  
   div.gallery img {
     display: block;
     width: 253px;
