add calendar page

--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ h1 {
 
 /* Dropdown container - needed to position the dropdown content */
 .dropdown {
-  float: right;
+  float: left;
   overflow: hidden;
 }
 
@@ -306,6 +306,7 @@ a {
 
 /* cover ****************************************************/
 /************************************************************/
+
 
 /************************************************************/
 /* about ****************************************************/
@@ -769,6 +770,32 @@ footer p {
   height: 102px;
 }
 /* RDT Protocol *********************************************/
+/************************************************************/
+
+
+/************************************************************/
+/* Calendar *************************************************/
+#pcCalendar iframe {
+  border:solid 1px #777;
+  width: 1000px;
+  height: 1000px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#pcCalendar .regionals {
+  color: #FF8D00;
+}
+
+#pcCalendar .challenge {
+  color: #237F2E;
+}
+
+#pcCalendar .cup {
+  color: #0B347D;
+}
+/* Calendar *************************************************/
 /************************************************************/
 
 
