--- a/pokemon/pokemon.css
+++ b/pokemon/pokemon.css
@@ -7,7 +7,7 @@ p {
 }
 
 div.left-container {
-  width: 20%; 
+  width: 20%;
   float: left;
 }
 
@@ -23,7 +23,7 @@ div.right-container {
 div.gallery {
   background-color: #777;
   padding: 6px 6px;
-  border-radius:5px;
+  border-radius: 5px;
 }
 
 /* Extra small devices (phones, 575px and down) */
@@ -62,7 +62,7 @@ div.gallery {
     /* max-width: 90%; */
     /* min-height: 2150px; */
   }
-  
+
   div.gallery img {
     display: block;
     width: 253px;
@@ -102,14 +102,14 @@ div.desc {
   cursor: pointer;
   height: 2.5rem;
   width: 2.5rem;
-  border-radius: .2rem;
+  border-radius: 0.2rem;
 }
 .pagination-number:hover,
 .pagination-button:not(.disabled):hover {
   background: #777;
 }
 .pagination-number.active {
-  background: #79DBAD;
+  background: #79dbad;
 }
 
 #go-to-top-button {
@@ -129,5 +129,31 @@ div.desc {
 }
 
 #go-to-top-button:hover {
-  background-color: #79DBAD; /* Add a dark-grey background on hover */
+  background-color: #79dbad; /* Add a dark-grey background on hover */
+}
+
+.eventCard .gallery img {
+  float: left;
+  margin-right: 20px;
+  height: 142px;
+  width: 142px;
+}
+
+.eventCard .gallery {
+  height: 154px;
+}
+
+.eventCard div.desc {
+  padding: 8px;
+  text-align: left;
+}
+
+.eventCard .desc h3 {
+  margin: 0 0;
+  font-size: 18px;
+}
+
+.eventCard .desc h4 {
+  margin: 0 0;
+  font-size: 16px;
 }
